<resources>
    <string name="app_name">Place AR App</string>
    <string name="home_button">Home</string>
    <string name="shop_button">Shop</string>
    <string name="design_button">Designs</string>
    <string name="account_button">Account</string>
    <string name="delete_button">Delete</string>
    <string name="welcome_text">Test On Your Place!</string>
    <string name="have_account">Already Have Account? Login</string>
    <string name="join_now">Join Now!</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="remember_me_text">Remember me</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="re_enter_password">ReEnter Password</string>
    <string name="register">Register</string>
    <string name="passwords_not_same">Passwords Are Not Same</string>
    <string name="username_must_be_filled">Username Must Be Filled</string>
    <string name="password_must_be_filled">Password Must Be Filled</string>
    <string name="name_must_be_filled">Name Must Be Filled</string>
    <string name="username_is_not_available">This Username Is Already Taken</string>
    <string name="register_loading_bar_title">Creating Your Account!</string>
    <string name="login_loading_bar_title">Sending You In!</string>
    <string name="register_loading_bar_message">Please Wait, While We Are Checking Your Account Details</string>
    <string name="account_created">Your Account Successfully Created</string>
    <string name="network_error">Network Error, Please Try Again After Seconds...</string>
    <string name="username_not_exists">This username do not exists</string>
    <string name="incorrect_password_or_username">Username or password is incorrect</string>
    <string name="add_model">Add Model</string>
    <string name="model_name">Model Name</string>
    <string name="enter_name">Your Name</string>
    <string name="backdrop_title">HEE</string>
    <string name="backdrop_subtitle">AGG</string>
</resources>
