<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/register"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/register_username_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@drawable/input_designs"
        android:padding="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/username_text"
        android:textColorHint="@color/colorPrimaryDark"
        android:inputType="text"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/register_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_username_input"
        android:background="@drawable/input_designs"
        android:padding="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="7dp"
        android:hint="@string/password_text"
        android:textColorHint="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/register_re_enter_password_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_input"
        android:background="@drawable/input_designs"
        android:padding="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="7dp"
        android:hint="@string/re_enter_password"
        android:textColorHint="@color/colorPrimaryDark"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="17sp"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_re_enter_password_input"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/buttons"
        android:padding="17dp"
        android:onClick="createAccountClicked"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/register"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/register_error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/passwords_not_same"
        android:layout_above="@id/register_username_input"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:visibility="invisible"/>


</RelativeLayout>