<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id = "@+id/hf"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <fragment
        android:id="@+id/ux_fragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/buttons"
        android:onClick="onDeleteButtonPressed"
        android:text="@string/delete_button"
        app:layout_constraintStart_toStartOf="@id/ux_fragment"
        app:layout_constraintTop_toTopOf="@id/ux_fragment"
        tools:visibility="visible" />

    <Button
        android:id="@+id/shop_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons"
        android:text="@string/shop_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/design_button"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_constraintEnd_toStartOf="@id/design_button" />

    <Button
        android:id="@+id/design_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons"
        android:text="@string/design_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/account_button"
        app:layout_constraintStart_toEndOf="@+id/shop_button" />

    <Button
        android:id="@+id/account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttons"
        android:onClick="onAccountButtonPressed"
        android:text="@string/account_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/design_button" />

    <Button
        android:id="@+id/add_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/buttons"
        android:onClick="changeModel"
        android:text="@string/add_model"
        app:layout_constraintEnd_toEndOf="@id/ux_fragment"
        app:layout_constraintTop_toTopOf="@id/ux_fragment" />

    <EditText
        android:id="@+id/model_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/input_designs"
        android:hint="@string/model_name"
        android:inputType="text"
        android:padding="13dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@id/add_model"
        app:layout_constraintTop_toTopOf="@id/ux_fragment" />

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delete_button">

        <LinearLayout
            android:id="@+id/preview_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:isScrollContainer="true"
            android:orientation="horizontal" />
    </HorizontalScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>