<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/welcome">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:src="@drawable/app_logo"
        />

    <TextView
        android:id="@+id/app_slogan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="88dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="150dp"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold|italic"
        />
    
    <Button
        android:id="@+id/main_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/have_account"
        android:textColor="@android:color/white" />
    <Button
        android:id="@+id/main_join_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/main_login_button"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/input_designs"
        android:padding="20dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:text="@string/join_now"
        android:textColor="@android:color/white" />
</RelativeLayout>